2001-03-30  Mo DeJong  <mdejong@redhat.com>

	* configure.in: Add --enable-fp-emulation
	back in and default it to enabled.

2001-03-29  Chris Abbey  <cabbey@bresnanlink.net>

	* configure.in:
	* acinlclude.m4:
	* src/m4/ac_check_broken_ostream.m4:
	* src/m4/ac_cxx_check_ostream_const_unsigned_char_ptr.m4:
	renamed the define, and reversed the logic in concensuous
	with the lists opinions.

2001-03-28  Eric Blake  <ebb9@email.byu.edu>

	* configure.in:
	* acinclude.m4:
	* src/config.h.in:
	* src/m4/ac_check_broken_ostream.m4: add detection
	for HP/UX's broken ostream class that can't handle
	<< const unsigned char *.

2001-03-28  Chris Abbey  <cabbey@bresnanlink.net>

	* configure.in:
	* src/m4/ac_check_iconv.m4: add configure support for
	Bruno Haible's libiconv for cygwin.

2001-03-27  Pascal Davoust  <davoustp@yahoo.com>

	* configure.in: Fix ICC FP bug detection
	so compiler name is tested before trying to compile
	the code snippet (garbage was printed when using
	VC++ on Win32).

2001-03-27  Eric Blake  <ebb9@email.byu.edu>

	* configure.in: Fix typos related to UINT_MAX
	needed for aCC on HP/UX.

2001-03-19  Mo DeJong  <mdejong@redhat.com>

	* src/m4/ac_cxx_check_set_new_handler.m4:
	Use AC_TRY_LINK not AC_TRY_COMPILE. This
	should correctly detect a C++ implementation
	of std::set_new_handler that compiles but
	fails to link for some odd reason.

2001-03-04  Mo DeJong  <mdejong@redhat.com>

	* src/stream.cpp (Stream, HaveDecoder,
	SetEncoding, DestroyEncoding,
	ProcessInputAscii, ProcessInputUnicode,
	DecodeNextCharacter):
	Add new HaveDecoder method, use it
	in SetEncoding and DestroyEncoding.
	Conditionally compile the
	ProcessInputAscii method. Call
	new InitializeDataBuffer in the
	ProcessInputAscii and ProcessInputUnicode
	methods. Use new HasMoreData method
	instead of dealing with source_ptr
	and source_tail directly. Move all
	decoding code into the DecodeNextCharacter
	method. Check for error conditions using
	the ErrorDecodeNextCharacter method.